FInal version for now (fixed CSP)

--- a/locales/de.json
+++ b/locales/de.json
@@ -565,5 +565,6 @@
 	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
 	"Rust Work Estimation": "Rust Work Estimation",
 	"Estimator is only an estimate for.": "Estimator is only an estimate for.",
-	"Estimator is only an estimate": "Estimator is only an estimate"
+	"Estimator is only an estimate": "Estimator is only an estimate",
+	"Show More": "Show More"
 }
