--- a/locales/en.json
+++ b/locales/en.json
@@ -561,5 +561,6 @@
 	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
 	"Rust Work Estimation": "Rust Work Estimation",
 	"Estimator is only an estimate for.": "Estimator is only an estimate for.",
-	"Estimator is only an estimate": "*Estimator is only an estimate and should not be taken as actual prices, for precise pricing contact us directly"
+	"Estimator is only an estimate": "*Estimator is only an estimate and should not be taken as actual prices, for precise pricing contact us directly",
+	"Show More": "Show More"
 }
