Translations fixed for admin and other, updated app.js no longer has some random admin route functions, sessions fixed to be proper and other unused things removed

--- a/locales/de.json
+++ b/locales/de.json
@@ -523,48 +523,69 @@
 	"No projects found.": "Keine Projekte gefunden.",
 	"Forgot password?": "Passwort vergessen?",
 	"Create an account instead?": "Erstellen Sie stattdessen ein Konto?",
-	"Service Breakdown": "Service Breakdown",
-	"Repair Price": "Repair Price",
-	"Material Price": "Material Price",
-	"Total": "Total",
-	"Estimated Rates": "Estimated Rates",
-	"Labor (per hour)": "Labor (per hour)",
-	"Materials flat fee": "Materials flat fee",
-	"Contact us for a detailed quote": "Contact us for a detailed quote",
-	"Repairs Pricing Overview": "Repairs Pricing Overview",
+	"Service Breakdown": "Service -Aufschlüsselung",
+	"Repair Price": "Reparaturpreis",
+	"Material Price": "Materialpreis",
+	"Total": "Gesamt",
+	"Estimated Rates": "Geschätzte Preise",
+	"Labor (per hour)": "Arbeit (pro Stunde)",
+	"Materials flat fee": "Materials Pauschalgebühr",
+	"Contact us for a detailed quote": "Kontaktieren Sie uns für ein detailliertes Angebot",
+	"Repairs Pricing Overview": "Reparaturpreisübersicht",
 	"Service": "Service",
-	"Estimated Cost": "Estimated Cost",
-	"Brake System Repairs": "Brake System Repairs",
-	"Suspension Work": "Suspension Work",
-	"Electrical Diagnostics": "Electrical Diagnostics",
-	"Repairs Estimate": "Repairs Estimate",
-	"Paint Job Estimation": "Paint Job Estimation",
-	"Paint job price estimate": "Paint job price estimate",
-	"Rustwork price estimate": "Rustwork price estimate",
-	"Repair job price estimate": "Repair job price estimate",
-	"Paint job prices": "Paint job prices",
-	"Rustwork prices": "Rustwork prices",
-	"Repair job prices": "Repair job prices",
-	"Paint job price calculator": "Paint job price calculator",
-	"Rustwork price calculator": "Rustwork price calculator",
-	"Other service prices": "Other service prices",
-	"Hourly Rate": "Hourly Rate",
-	"Body Labor": "Body Labor",
-	"Paint Labor": "Paint Labor",
-	"Mechanical Work (In-House)": "Mechanical Work (In-House)",
-	"Mechanical Work (Sublet)": "Mechanical Work (Sublet)",
-	"Frame Labor": "Frame Labor",
-	"Aluminum Labor": "Aluminum Labor",
-	"Paint Supplies": "Paint Supplies",
-	"Large Vehicle Service": "Large Vehicle Service",
-	"Exotic Cars": "Exotic Cars",
+	"Estimated Cost": "Geschätzte Kosten",
+	"Brake System Repairs": "Reparaturen des Bremssystems",
+	"Suspension Work": "Suspensionsarbeit",
+	"Electrical Diagnostics": "Elektrische Diagnostik",
+	"Repairs Estimate": "Reparaturschätzung",
+	"Paint Job Estimation": "Schätzung der Lackierung",
+	"Paint job price estimate": "Schätzung des Arbeitsplatzpreises malen",
+	"Rustwork price estimate": "Rostworkpreisschätzung",
+	"Repair job price estimate": "Schätzung des Arbeitsplatzpreises reparieren",
+	"Paint job prices": "Malen Sie die Jobpreise",
+	"Rustwork prices": "Rostworkpreise",
+	"Repair job prices": "Beschäftigungspreise reparieren",
+	"Paint job price calculator": "Lackierungspreisrechner lackieren",
+	"Rustwork price calculator": "Rostwork -Preisrechner",
+	"Other service prices": "Andere Servicepreise",
+	"Hourly Rate": "Stundensatz",
+	"Body Labor": "Körperarbeit",
+	"Paint Labor": "Malen Sie Arbeit",
+	"Mechanical Work (In-House)": "Mechanische Arbeit (intern)",
+	"Mechanical Work (Sublet)": "Mechanische Arbeit (Untervermietung)",
+	"Frame Labor": "Rahmen Arbeit",
+	"Aluminum Labor": "Aluminiumarbeit",
+	"Paint Supplies": "Lackierungen",
+	"Large Vehicle Service": "Großer Fahrzeugservice",
+	"Exotic Cars": "Exotische Autos",
 	"Mercedes-Benz Service": "Mercedes-Benz Service",
-	"Storage Fee": "Storage Fee",
-	"Welding Estimate": "Welding Estimate",
-	"Estimator description": "Estimator description",
-	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
-	"Rust Work Estimation": "Rust Work Estimation",
-	"Estimator is only an estimate for.": "Estimator is only an estimate for.",
-	"Estimator is only an estimate": "Estimator is only an estimate",
-	"Show More": "Show More"
+	"Storage Fee": "Speichergebühr",
+	"Welding Estimate": "Schweißschätzung",
+	"Estimator description": "Schätzungsbeschreibung",
+	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Der Schätzer ist nur eine Schätzung für Preise. Für genauere Preise kontaktieren Sie uns direkt.",
+	"Rust Work Estimation": "Rostarbeitsschätzung",
+	"Estimator is only an estimate for.": "Der Schätzer ist nur eine Schätzung für.",
+	"Estimator is only an estimate": "Schätzer ist nur eine Schätzung",
+	"Show More": "Zeigen Sie mehr",
+	"All projects": "Alle Projekte",
+	"User-ID": "Benutzer-ID",
+	"End Date": "Enddatum",
+	"(Click to continue project)": "(Klicken Sie hier, um das Projekt fortzusetzen)",
+	"Project has been delayed": "Das Projekt wurde verzögert",
+	"All users": "Alle Benutzer",
+	"Active users": "Aktive Benutzer",
+	"Users that have projects": "Benutzer, die Projekte haben",
+	"Projects on": "Projekte auf",
+	"All administrators": "Alle Administratoren",
+	"Admin Tenure": "Admin -Amtszeit",
+	"Admin Permissions": "Administratorberechtigungen",
+	"All workers": "Alle Arbeiter",
+	"Projects in progress": "Projekte in Arbeit",
+	"Completed projects": "Abgeschlossene Projekte",
+	"Pending projects": "Ausstehende Projekte",
+	"Cancelled or no arrival projects": "Storniert oder keine Ankunftsprojekte",
+	"Removing a worker": "Einen Arbeiter entfernen",
+	"Successfully removed worker account": "Erfolgreich entferntes Arbeiterkonto entfernt",
+	"Successfully made worker account": "Erfolgreich gemachtes Arbeiterkonto",
+	"Successfully gave administrator perms": "Erfolgreich den Administrator -Perm"
 }
