--- a/locales/en.json
+++ b/locales/en.json
@@ -560,7 +560,29 @@
 	"Estimator description": "Estimator description",
 	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
 	"Rust Work Estimation": "Rust Work Estimation",
-	"Estimator is only an estimate for.": "Estimator is only an estimate for.",
-	"Estimator is only an estimate": "*Estimator is only an estimate and should not be taken as actual prices, for precise pricing contact us directly",
-	"Show More": "Show More"
+	"Show More": "Show More",
+	"(Click to cancel)": "(Click to cancel)",
+	"Project has been cancelled": "Project has been cancelled",
+	"Estimator is only an estimate": "Estimator is only an estimate",
+	"All projects": "All projects",
+	"User-ID": "User-ID",
+	"End Date": "End Date",
+	"(Click to continue project)": "(Click to continue project)",
+	"Project has been delayed": "Project has been delayed",
+	"All users": "All users",
+	"Active users": "Active users",
+	"Users that have projects": "Users that have projects",
+	"Projects on": "Projects on",
+	"All administrators": "All administrators",
+	"Admin Tenure": "Admin Tenure",
+	"Admin Permissions": "Admin Permissions",
+	"All workers": "All workers",
+	"Projects in progress": "Projects in progress",
+	"Completed projects": "Completed projects",
+	"Pending projects": "Pending projects",
+	"Cancelled or no arrival projects": "Cancelled or no arrival projects",
+	"Removing a worker": "Removing a worker",
+	"Successfully removed worker account": "Successfully removed worker account",
+	"Successfully made worker account": "Successfully made worker account",
+	"Successfully gave administrator perms": "Successfully gave administrator perms"
 }
