--- a/locales/ru.json
+++ b/locales/ru.json
@@ -523,48 +523,69 @@
 	"No projects found.": "Проектов не найдено.",
 	"Forgot password?": "Забыли пароль?",
 	"Create an account instead?": "Создайте вместо этого учетную запись?",
-	"Service Breakdown": "Service Breakdown",
-	"Repair Price": "Repair Price",
-	"Material Price": "Material Price",
-	"Total": "Total",
-	"Estimated Rates": "Estimated Rates",
-	"Labor (per hour)": "Labor (per hour)",
-	"Materials flat fee": "Materials flat fee",
-	"Contact us for a detailed quote": "Contact us for a detailed quote",
-	"Repairs Pricing Overview": "Repairs Pricing Overview",
-	"Service": "Service",
-	"Estimated Cost": "Estimated Cost",
-	"Brake System Repairs": "Brake System Repairs",
-	"Suspension Work": "Suspension Work",
-	"Electrical Diagnostics": "Electrical Diagnostics",
-	"Repairs Estimate": "Repairs Estimate",
-	"Paint Job Estimation": "Paint Job Estimation",
-	"Paint job price estimate": "Paint job price estimate",
-	"Rustwork price estimate": "Rustwork price estimate",
-	"Repair job price estimate": "Repair job price estimate",
-	"Paint job prices": "Paint job prices",
-	"Rustwork prices": "Rustwork prices",
-	"Repair job prices": "Repair job prices",
-	"Paint job price calculator": "Paint job price calculator",
-	"Rustwork price calculator": "Rustwork price calculator",
-	"Other service prices": "Other service prices",
-	"Hourly Rate": "Hourly Rate",
-	"Body Labor": "Body Labor",
-	"Paint Labor": "Paint Labor",
-	"Mechanical Work (In-House)": "Mechanical Work (In-House)",
-	"Mechanical Work (Sublet)": "Mechanical Work (Sublet)",
-	"Frame Labor": "Frame Labor",
-	"Aluminum Labor": "Aluminum Labor",
-	"Paint Supplies": "Paint Supplies",
-	"Large Vehicle Service": "Large Vehicle Service",
-	"Exotic Cars": "Exotic Cars",
-	"Mercedes-Benz Service": "Mercedes-Benz Service",
-	"Storage Fee": "Storage Fee",
-	"Welding Estimate": "Welding Estimate",
-	"Estimator description": "Estimator description",
-	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
-	"Rust Work Estimation": "Rust Work Estimation",
-	"Estimator is only an estimate for.": "Estimator is only an estimate for.",
-	"Estimator is only an estimate": "Estimator is only an estimate",
-	"Show More": "Show More"
+"Service Breakdown": "Поломка услуги",
+  "Repair Price": "Цена ремонта",
+  "Material Price": "Материальная цена",
+  "Total": "Общий",
+  "Estimated Rates": "Расчетные ставки",
+  "Labor (per hour)": "Труд (в час)",
+  "Materials flat fee": "Материалы фиксированная плата",
+  "Contact us for a detailed quote": "Свяжитесь с нами для подробной цитаты",
+  "Repairs Pricing Overview": "Обзор ценообразования ремонта",
+  "Service": "Услуга",
+  "Estimated Cost": "Расчетная стоимость",
+  "Brake System Repairs": "Ремонт тормозной системы",
+  "Suspension Work": "Подвеска работа",
+  "Electrical Diagnostics": "Электрическая диагностика",
+  "Repairs Estimate": "Оценка ремонта",
+  "Paint Job Estimation": "Оценка работы покраски",
+  "Paint job price estimate": "Оценка цены на рисование",
+  "Rustwork price estimate": "Оценка цен на ржавчину",
+  "Repair job price estimate": "Оценка цен на ремонт рабочих мест",
+  "Paint job prices": "Покрасить цены на работу",
+  "Rustwork prices": "Цена на ржавчину",
+  "Repair job prices": "Ремонтировать цены на работу",
+  "Paint job price calculator": "Калькулятор цены на работу",
+  "Rustwork price calculator": "Калькулятор цены ржавчины",
+  "Other service prices": "Другие цены на услуги",
+  "Hourly Rate": "Почасовая ставка",
+  "Body Labor": "Труд тела",
+  "Paint Labor": "Покрасить труд",
+  "Mechanical Work (In-House)": "Механическая работа (собственная)",
+  "Mechanical Work (Sublet)": "Механическая работа (sublet)",
+  "Frame Labor": "Рама труда",
+  "Aluminum Labor": "Алюминиевый труд",
+  "Paint Supplies": "Поставки краски",
+  "Large Vehicle Service": "Большой транспортный сервис",
+  "Exotic Cars": "Экзотические автомобили",
+  "Mercedes-Benz Service": "Mercedes-Benz Service",
+  "Storage Fee": "Плата за хранение",
+  "Welding Estimate": "Оценка сварки",
+  "Estimator description": "Оценка оценки",
+  "Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Оценка является лишь оценкой цен, для более точных цен, пожалуйста, свяжитесь с нами напрямую.",
+  "Rust Work Estimation": "Оценка работы ржавчины",
+  "Estimator is only an estimate for.": "Оценка является лишь оценкой для.",
+  "Estimator is only an estimate": "Оценка является лишь оценкой",
+  "Show More": "Показать больше",
+  "All projects": "Все проекты",
+  "User-ID": "ID пользователя",
+  "End Date": "Дата окончания",
+  "(Click to continue project)": "(Нажмите, чтобы продолжить проект)",
+  "Project has been delayed": "Проект был отложено",
+  "All users": "Все пользователи",
+  "Active users": "Активные пользователи",
+  "Users that have projects": "Пользователи, у которых есть проекты",
+  "Projects on": "Проекты на",
+  "All administrators": "Все администраторы",
+  "Admin Tenure": "Администратор",
+  "Admin Permissions": "Административные разрешения",
+  "All workers": "Все работники",
+  "Projects in progress": "Проекты в процессе",
+  "Completed projects": "Завершены проекты",
+  "Pending projects": "Ожидающие проекты",
+  "Cancelled or no arrival projects": "Отменено или нет проектов прибытия",
+  "Removing a worker": "Удаление работника",
+  "Successfully removed worker account": "Успешно удаленная учетная запись рабочей",
+  "Successfully made worker account": "Успешно сделано работник аккаунт",
+  "Successfully gave administrator perms": "Успешно дал администратору Perms"
 }
