Small fixes to latvian translation

--- a/locales/lv.json
+++ b/locales/lv.json
@@ -279,11 +279,11 @@
 	"Cancelled": "Atcelts",
 	"Language": "Valoda",
 	"To be finished today": "Pabeigt šodien",
-	"Active Projects": "Aktīvi remonti",
+	"Active Projects": "Aktīvie remonti",
 	"End Date Projection": "Beigu datuma projekcija",
 	"Delayed Status": "Aizkavēts statuss",
 	"(Click to finish project)": "(Noklikšķiniet, lai pabeigtu projektu)",
-	"Delayed Projects": "Aizkavētie remonti",
+	"Delayed Projects": "Kavētie remonti",
 	"(Click to delay)": "(Noklikšķiniet, lai aizkavētu)",
 	"Project end date has changed due to delay": "Projekta beigu datums ir mainīts kavēšanās dēļ",
 	"Estimated Price: $": "Paredzamā cena: $",
@@ -491,7 +491,7 @@
 	"Search by Date": "Mekltēt pēc datuma",
 	"View All Users": "Apskatīt visus lietotājus",
 	"Filter: All Users": "Filtrs: Visi lietotāji",
-	"Active Users": "Aktīvie lietotāji",
+	"Active Users": "Pašreizējie lietotāji",
 	"Users With Projects": "Lietotāji ar remontiem",
 	"Search Users": "Meklēt lietotāju",
 	"View All Projects": "Apskatīt visus projektus",
@@ -573,7 +573,7 @@
 	"Admin Tenure": "Administratoru stāžš",
 	"Admin Permissions": "Administratoru atļauja",
 	"All workers": "Visi darbinieki",
-	"Projects in progress": "Iesāktie remonti",
+	"Projects in progress": "Aktīvie remonti",
 	"Completed projects": "Pabeigtie remonti",
 	"Pending projects": "Gaidāmie remonti",
 	"Cancelled or no arrival projects": "Atceltie vai remonti bez ierašanās",
