--- a/locales/ru.json
+++ b/locales/ru.json
@@ -523,69 +523,75 @@
 	"No projects found.": "Проектов не найдено.",
 	"Forgot password?": "Забыли пароль?",
 	"Create an account instead?": "Создайте вместо этого учетную запись?",
-"Service Breakdown": "Поломка услуги",
-  "Repair Price": "Цена ремонта",
-  "Material Price": "Материальная цена",
-  "Total": "Общий",
-  "Estimated Rates": "Расчетные ставки",
-  "Labor (per hour)": "Труд (в час)",
-  "Materials flat fee": "Материалы фиксированная плата",
-  "Contact us for a detailed quote": "Свяжитесь с нами для подробной цитаты",
-  "Repairs Pricing Overview": "Обзор ценообразования ремонта",
-  "Service": "Услуга",
-  "Estimated Cost": "Расчетная стоимость",
-  "Brake System Repairs": "Ремонт тормозной системы",
-  "Suspension Work": "Подвеска работа",
-  "Electrical Diagnostics": "Электрическая диагностика",
-  "Repairs Estimate": "Оценка ремонта",
-  "Paint Job Estimation": "Оценка работы покраски",
-  "Paint job price estimate": "Оценка цены на рисование",
-  "Rustwork price estimate": "Оценка цен на ржавчину",
-  "Repair job price estimate": "Оценка цен на ремонт рабочих мест",
-  "Paint job prices": "Покрасить цены на работу",
-  "Rustwork prices": "Цена на ржавчину",
-  "Repair job prices": "Ремонтировать цены на работу",
-  "Paint job price calculator": "Калькулятор цены на работу",
-  "Rustwork price calculator": "Калькулятор цены ржавчины",
-  "Other service prices": "Другие цены на услуги",
-  "Hourly Rate": "Почасовая ставка",
-  "Body Labor": "Труд тела",
-  "Paint Labor": "Покрасить труд",
-  "Mechanical Work (In-House)": "Механическая работа (собственная)",
-  "Mechanical Work (Sublet)": "Механическая работа (sublet)",
-  "Frame Labor": "Рама труда",
-  "Aluminum Labor": "Алюминиевый труд",
-  "Paint Supplies": "Поставки краски",
-  "Large Vehicle Service": "Большой транспортный сервис",
-  "Exotic Cars": "Экзотические автомобили",
-  "Mercedes-Benz Service": "Mercedes-Benz Service",
-  "Storage Fee": "Плата за хранение",
-  "Welding Estimate": "Оценка сварки",
-  "Estimator description": "Оценка оценки",
-  "Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Оценка является лишь оценкой цен, для более точных цен, пожалуйста, свяжитесь с нами напрямую.",
-  "Rust Work Estimation": "Оценка работы ржавчины",
-  "Estimator is only an estimate for.": "Оценка является лишь оценкой для.",
-  "Estimator is only an estimate": "Оценка является лишь оценкой",
-  "Show More": "Показать больше",
-  "All projects": "Все проекты",
-  "User-ID": "ID пользователя",
-  "End Date": "Дата окончания",
-  "(Click to continue project)": "(Нажмите, чтобы продолжить проект)",
-  "Project has been delayed": "Проект был отложено",
-  "All users": "Все пользователи",
-  "Active users": "Активные пользователи",
-  "Users that have projects": "Пользователи, у которых есть проекты",
-  "Projects on": "Проекты на",
-  "All administrators": "Все администраторы",
-  "Admin Tenure": "Администратор",
-  "Admin Permissions": "Административные разрешения",
-  "All workers": "Все работники",
-  "Projects in progress": "Проекты в процессе",
-  "Completed projects": "Завершены проекты",
-  "Pending projects": "Ожидающие проекты",
-  "Cancelled or no arrival projects": "Отменено или нет проектов прибытия",
-  "Removing a worker": "Удаление работника",
-  "Successfully removed worker account": "Успешно удаленная учетная запись рабочей",
-  "Successfully made worker account": "Успешно сделано работник аккаунт",
-  "Successfully gave administrator perms": "Успешно дал администратору Perms"
+	"Service Breakdown": "Поломка услуги",
+	"Repair Price": "Цена ремонта",
+	"Material Price": "Материальная цена",
+	"Total": "Общий",
+	"Estimated Rates": "Расчетные ставки",
+	"Labor (per hour)": "Труд (в час)",
+	"Materials flat fee": "Материалы фиксированная плата",
+	"Contact us for a detailed quote": "Свяжитесь с нами для подробной цитаты",
+	"Repairs Pricing Overview": "Обзор ценообразования ремонта",
+	"Service": "Услуга",
+	"Estimated Cost": "Расчетная стоимость",
+	"Brake System Repairs": "Ремонт тормозной системы",
+	"Suspension Work": "Подвеска работа",
+	"Electrical Diagnostics": "Электрическая диагностика",
+	"Repairs Estimate": "Оценка ремонта",
+	"Paint Job Estimation": "Оценка работы покраски",
+	"Paint job price estimate": "Оценка цены на рисование",
+	"Rustwork price estimate": "Оценка цен на ржавчину",
+	"Repair job price estimate": "Оценка цен на ремонт рабочих мест",
+	"Paint job prices": "Покрасить цены на работу",
+	"Rustwork prices": "Цена на ржавчину",
+	"Repair job prices": "Ремонтировать цены на работу",
+	"Paint job price calculator": "Калькулятор цены на работу",
+	"Rustwork price calculator": "Калькулятор цены ржавчины",
+	"Other service prices": "Другие цены на услуги",
+	"Hourly Rate": "Почасовая ставка",
+	"Body Labor": "Труд тела",
+	"Paint Labor": "Покрасить труд",
+	"Mechanical Work (In-House)": "Механическая работа (собственная)",
+	"Mechanical Work (Sublet)": "Механическая работа (sublet)",
+	"Frame Labor": "Рама труда",
+	"Aluminum Labor": "Алюминиевый труд",
+	"Paint Supplies": "Поставки краски",
+	"Large Vehicle Service": "Большой транспортный сервис",
+	"Exotic Cars": "Экзотические автомобили",
+	"Mercedes-Benz Service": "Mercedes-Benz Service",
+	"Storage Fee": "Плата за хранение",
+	"Welding Estimate": "Оценка сварки",
+	"Estimator description": "Оценка оценки",
+	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Оценка является лишь оценкой цен, для более точных цен, пожалуйста, свяжитесь с нами напрямую.",
+	"Rust Work Estimation": "Оценка работы ржавчины",
+	"Estimator is only an estimate for.": "Оценка является лишь оценкой для.",
+	"Estimator is only an estimate": "Оценка является лишь оценкой",
+	"Show More": "Показать больше",
+	"All projects": "Все проекты",
+	"User-ID": "ID пользователя",
+	"End Date": "Дата окончания",
+	"(Click to continue project)": "(Нажмите, чтобы продолжить проект)",
+	"Project has been delayed": "Проект был отложено",
+	"All users": "Все пользователи",
+	"Active users": "Активные пользователи",
+	"Users that have projects": "Пользователи, у которых есть проекты",
+	"Projects on": "Проекты на",
+	"All administrators": "Все администраторы",
+	"Admin Tenure": "Администратор",
+	"Admin Permissions": "Административные разрешения",
+	"All workers": "Все работники",
+	"Projects in progress": "Проекты в процессе",
+	"Completed projects": "Завершены проекты",
+	"Pending projects": "Ожидающие проекты",
+	"Cancelled or no arrival projects": "Отменено или нет проектов прибытия",
+	"Removing a worker": "Удаление работника",
+	"Successfully removed worker account": "Успешно удаленная учетная запись рабочей",
+	"Successfully made worker account": "Успешно сделано работник аккаунт",
+	"Successfully gave administrator perms": "Успешно дал администратору Perms",
+	"Users Projects": "Users Projects",
+	"contact_form_fill_all_fields": "contact_form_fill_all_fields",
+	"Fill all contact form fields": "Fill all contact form fields",
+	"Conctact form error": "Conctact form error",
+	"Password changed successfully": "Password changed successfully",
+	"Information updated succesfully": "Information updated succesfully"
 }
