--- a/locales/lv.json
+++ b/locales/lv.json
@@ -587,5 +587,6 @@
 	"Conctact form error": "Neizdevās nosūtīt ziņu",
 	"Contact form success": "Ziņa nosūtīta veiksmīgi",
 	"Password changed successfully": "Parole veiksmīgi nomainīta",
-	"Information updated succesfully": "Dati veiksmīgi atjaunoti"
+	"Information updated succesfully": "Dati veiksmīgi atjaunoti",
+	"Appointment successfully cancelled.": "Appointment successfully cancelled."
 }
