--- a/locales/ru.json
+++ b/locales/ru.json
@@ -593,5 +593,6 @@
 	"Fill all contact form fields": "Fill all contact form fields",
 	"Conctact form error": "Conctact form error",
 	"Password changed successfully": "Password changed successfully",
-	"Information updated succesfully": "Information updated succesfully"
+	"Information updated succesfully": "Information updated succesfully",
+	"Appointment successfully cancelled.": "Appointment successfully cancelled."
 }
