--- a/locales/en.json
+++ b/locales/en.json
@@ -63,7 +63,7 @@
 	"work_hours_title": "Our Work Hours",
 	"work_hours_text": "We are open during the following hours:",
 	"monday_to_friday": "Monday-Friday: 9:00 AM - 6:00 PM",
-	"saturday": "Saturday: 10:00 AM - 3:00 PM",
+	"saturday": "Saturday: Closed",
 	"sunday": "Sunday: Closed",
 	"services_title": "We offer top tier car repairs",
 	"overall_checkup": "Overall Checkup",
@@ -558,12 +558,12 @@
 	"Storage Fee": "Storage Fee",
 	"Welding Estimate": "Welding Estimate",
 	"Estimator description": "Estimator description",
-	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
+	"Estimator is only an estimate for prices, for more precise pricing please contact us directly.": "*Estimator is only an estimate for prices, for more precise pricing please contact us directly.",
 	"Rust Work Estimation": "Rust Work Estimation",
 	"Show More": "Show More",
 	"(Click to cancel)": "(Click to cancel)",
 	"Project has been cancelled": "Project has been cancelled",
-	"Estimator is only an estimate": "Estimator is only an estimate for prices, for more precise pricing please contact us directly",
+	"Estimator is only an estimate": "*Estimator is only an estimate for prices, for more precise pricing please contact us directly",
 	"All projects": "All projects",
 	"User-ID": "User-ID",
 	"End Date": "End Date",
@@ -591,5 +591,14 @@
 	"Conctact form error": "Conctact form error",
 	"Password changed successfully": "Password changed successfully",
 	"Information updated succesfully": "Information updated succesfully",
-	"Appointment successfully cancelled.": "Appointment successfully cancelled."
+	"Appointment successfully cancelled.": "Appointment successfully cancelled.",
+	"Choose an appointment date": "Choose an appointment date",
+	"Successfully logged out": "Successfully logged out",
+	"Contact form success": "Contact form success",
+	"Attempting to send email...": "Attempting to send email...",
+	"Message sent succesfully": "Message sent succesfully",
+	"Please select a date and time": "Please select a date and time",
+	"Please select an appointment type": "Please select an appointment type",
+	"Information updated successfully": "Information updated successfully",
+	"Back to login": "Back to login"
 }
