--- a/locales/ru.json
+++ b/locales/ru.json
@@ -605,5 +605,6 @@
 	"Information updated successfully": "Information updated successfully",
 	"Back to login": "Back to login",
 	"Choose an appointment type first": "Choose an appointment type first",
-	"Password reset email sent": "Password reset email sent"
+	"Password reset email sent": "Password reset email sent",
+	"End date changed successfully": "End date changed successfully"
 }
