--- a/locales/de.json
+++ b/locales/de.json
@@ -606,5 +606,17 @@
 	"Back to login": "Back to login",
 	"Choose an appointment type first": "Choose an appointment type first",
 	"Password reset email sent": "Password reset email sent",
-	"End date changed successfully": "End date changed successfully"
+	"End date changed successfully": "End date changed successfully",
+	"dasfds": "dasfds",
+	"Project finished successfully": "Project finished successfully",
+	"Reset email sent": "Reset email sent",
+	"New Password": "New Password",
+	"Password must be at least 8 characters": "Password must be at least 8 characters",
+	"Enter a new password": "Enter a new password",
+	"Enter new password": "Enter new password",
+	"Confirm Password": "Confirm Password",
+	"Passwords do not match": "Passwords do not match",
+	"Password changed successfully!": "Password changed successfully!",
+	"Sending reset email...": "Sending reset email...",
+	"Reset token is invalid or expired": "Reset token is invalid or expired"
 }
