--- a/locales/lv.json
+++ b/locales/lv.json
@@ -598,17 +598,17 @@
 	"Information updated successfully": "Veiksmīgi atjaunota informācija",
 	"Choose an appointment type first": "Vispirms izvēlieties remonta veidu",
 	"Password reset email sent": "Paroles maiņas e-pasts nosūtīts",
-	"End date changed successfully": "End date changed successfully",
-	"dasfds": "dasfds",
-	"Project finished successfully": "Project finished successfully",
-	"Reset email sent": "Reset email sent",
-	"New Password": "New Password",
-	"Password must be at least 8 characters": "Password must be at least 8 characters",
-	"Enter a new password": "Enter a new password",
-	"Enter new password": "Enter new password",
-	"Confirm Password": "Confirm Password",
-	"Passwords do not match": "Passwords do not match",
-	"Password changed successfully!": "Password changed successfully!",
-	"Sending reset email...": "Sending reset email...",
-	"Reset token is invalid or expired": "Reset token is invalid or expired"
+	"End date changed successfully": "Beigu datums veiksmīgi nomainīts",
+	"Project finished successfully": "Projekts veiksmīgi pabeigts",
+	"Reset email sent": "Paroles maiņas e-pasts nosūtīts",
+	"New Password": "Jauna parole",
+	"Password must be at least 8 characters": "Parolei jābūt vismaz 8 rakstzīmēm",
+	"Enter a new password": "Ievadiet jaunu paroli",
+	"Enter new password": "Ievadiet jaunu paroli",
+	"Confirm Password": "Apstipriniet paroli",
+	"Passwords do not match": "Paroles nesakrīt",
+	"Password changed successfully!": "Parole veiksmīgi nomainīta!",
+	"Sending reset email...": "Notiek E-pasta sūtīšana...",
+	"Reset token is invalid or expired": "Tokens paroles maiņai nav derīgs vai ir beidzies",
+	"User not found": "Lietotājs nav atrasts"
 }
